using System;
namespace DesignPatterns.FacadePattern
{
    public class Circle : Shape
    {
        public void draw()
        {
            Console.WriteLine("Draw Circle");
        }
    }
}