namespace DesignPatterns.FacadePattern
{
    public interface Shape
    {
        void draw();
    }
}