using System;
namespace DesignPatterns.FacadePattern
{
    public class Square : Shape
    {
        public void draw() {
            Console.WriteLine("Draw Square");
        }
    }
}